@@ -1,3 +1,7 @@
+2019-02-22      Gaius Mulley <gaius@southwales.ac.uk>
+
+	* python/student/chcuboid.py:  improved comments.
+
 2018-10-01      Gaius Mulley <gaius@southwales.ac.uk>
 
 	* python/developer-txt2map:  improved descriptions.
